# atcoder_lib_py

./: .env.sample  .gitignore  CONTRIBUTING.md  README.md  aclの使い方.py  atcoder_heuristic.py  atcoder_heuristic2.py  atcoder_library_descrition.py  auto_test.py  command.txt  input.txt  library_descrition.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  verify.yml
algorithm/binary_search_tree/: avl_tree.py  splay_tree.py  treap.py
algorithm/dp/: doubling.py  edit_distance.py  traveling_salesman_problem_bitDP.py  treeDP.py  tree_dp.py
algorithm/fenwick_tree/: compressed_fenwick_tree.py  dynamic_fenwick_tree.py  fenwick_tree.py
algorithm/graph/: bellman_ford.py  bfs.py  bipartite_graph.py  csr.py  cycle_detection.py  dfs.py  dijkstra.py  dinic.py  functional_graph.py  graph.py  lowlink.py  maxflow.py  scc_kosaraju.py  strongly_connected_component(SCC).py  strongly_connected_component.py  topological_sort.py  warshall_floid.py
algorithm/heap/: heap.py  leftist_heap.py
algorithm/matrix/: gaussian_elimination.py  matrix_power.py
algorithm/number_theory/: bit_technic.py  chinese_remainder_theorem.py  convert_base.py  decimal_conversion.py  divisor_enum.py  divisor_multiple_zeta_mobius.py  eratosthenes.py  ext_gcd.py  fast_prime_factorization_divisor_enum.py  fft.py  floor_sum.py  gaussian_elimination.py  mobius_function.py  mod_factorial.py  modint.py  ntt.py  prime_check.py  prime_factrization.py  sieve_of_eratosthenes.py
algorithm/other_algorithm/: binary_search.py  convex_hull_trick.py  coordinate_compression.py  cumulative_sum.py  merge_sort.py  mo_algorithm.py  next_permutation.py  ring.py  run_length_encoding.py  sliding_window_minimum.py  square_root_decomposition.py  zeta_mobius_transform.py  zobrist_hash.py
algorithm/other_data_structure/: binary_trie.py  merge_tree.py  ndarray.py  sparse_table.py  wavelet_matrix.py
algorithm/persistent_data_structure/: persistent_stack.py
algorithm/segment_tree/: compressed_lazy_segment_tree.py  compressed_segment_tree.py  dynamic_lazy_segment_tree.py  lazy_segment_tree.py  segment_tree.py  segment_tree_beats.py
algorithm/string/: kmp.py  rolling_hash.py  suffix_array.py  trie.py  trie_tree.py  z_algorithm.py
algorithm/tree/: auxiliary_tree.py  euler_tour.py  heavy_light_decomposition.py  lowest_common_ancestor.py  prim.py  (+2 more)
docs/: IDEAS.md  codon.md  tatyam_set.md
test/: README.md  atcoder.py  atcoder_heuristic.py  auto_test.py  data.csv  input.txt  random_test.py  sort_check.py  tmp.py  tmp.txt  ファイルの説明.txt
tools/: random_test.py  snippets_generater.py
(+120 files in other folders)
