[project]
name = "atcoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ac-library-python",
    "beautifulsoup4>=4.14.3",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.2",
]

[tool.pyright]
include = [
    "tools",
    "library",
]

[tool.ruff]
line-length = 88

# 無効化するチェック
ignore = [
    "E741" # あいまいな変数（l, 1, I が紛らわしいってやつ）
]
include = [
    "tools/**/*.py",
    "library/**/*.py",
]

[tool.uv.sources]
ac-library-python = { git = "https://github.com/not522/ac-library-python" }
