[project]
name = "atcoder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ac-library-python",
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
auto_test = [
    "beautifulsoup4>=4.14.3",
    "libcst>=1.8.6",
    "pyautogui>=0.9.54",
    "pygetwindow>=0.0.9",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.2",
]

[tool.pyright]
include = [
    "tools",
    "library",
]

[tool.ruff]
line-length = 88
include = [
    "tools/**/*.py",
    "library/**/*.py",
]

[tool.ruff.lint]
# 無効化するチェック
ignore = [
    "E741" # あいまいな変数（l, 1, I が紛らわしいってやつ）
]

[tool.uv.sources]
ac-library-python = { git = "https://github.com/not522/ac-library-python" }
